  @startuml observer
'观察者模式UML类图

class GameTemplate {
  - observers : List<BombObserver>
  __
  + registerObserver(o : BombObserver)
  + removeObserver(o : BombObserver)
  + notifyObservers()
}

interface BombObserver {
  + onBombActivate(enemies, bullets)
}

class BombEffectHandler {
  - game : GameTemplate
  __
  + onBombActivate(enemies, bullets)
}

class BombProp {
  + active(aircraft)
}

GameTemplate o--> BombObserver
BombObserver <|.. BombEffectHandler
GameTemplate ..> BombProp

note right of GameTemplate
  Subject角色
  触发: notifyObservers()
end note

@enduml